Fix trinkets page spacing to match other pages

--- a/css/blog.css
+++ b/css/blog.css
@@ -151,7 +151,8 @@ h1 {
 }
 #blog,
 #research,
-#about {
+#about,
+#trinkets {
   margin-top: 80px;
   margin-bottom: 100px;
 }
